src/index.css
@import url("https://fonts.googleapis.com/css2?family=Glory:ital,wght@0,100..800;1,100..800&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Glory", sans-serif;
}

@layer components {
  body {
    @apply bg-gray-100;
  }
  button {
    @apply font-bold py-2 w-32 px-4  border-t-[0.5px] border-l-2 border-r-4 border-b-4 bg-yellow-light border-deep-brown dark:bg-transparent dark:border-yellow-light rounded-lg dark:text-deep-brown text-3xl;
  }

  h1 {
    @apply font-bold text-3xl md:text-5xl text-deep-brown;
  }
}

